# dataset-houjin-bangou

./: .gitignore  README.md  dbt_project.yml  fdl.toml  main.py  profiles.yml  pyproject.toml
.github/workflows/: sync-daily.yml  sync.yml
macros/: lg_check_digit.sql  read_houjin_csv.sql
models/main/mart/: mart_houjin_bangou.sql  mart_houjin_bangou.yml
models/main/raw/: _schema.yml  raw_houjin_bangou.sql
models/main/stg/: stg_houjin_bangou.sql
scripts/: build.sh
